      up, e.g., from 9.96 to 10 needs more digits; thanks to Ella Kaye and
      Kelly Bodwin, fixing \PR{8934} during \sQuote{R Dev Day} at useR!2024.

      \item \pkg{tools}' \code{toTitleCase()} now works better, fixing
      \PR{18674}, thanks to Shannon Pileggi, Sarah Zeller, Reiko Okamoto,
      and Hugo Gruson's \sQuote{R Dev Day} effort.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.1}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Functions \code{R_atof} and \code{R_strtod} declared in
      header \file{R_ext/Utils.h} are now documented in
      \sQuote{Writing R Extensions} and so formally part of the API.

      \item The non-API entry points \code{Rf_setSVector},
      \code{Rf_StringFalse}, \code{Rf_StringTrue} and
      \code{Rf_isBlankString} have been added to those reported by
      \command{R CMD check}.

      \item The new function \code{Rf_allocLang} is now available. This
      provides an alternative to the idiom of calling
      \code{Rf_allocList} followed by \code{SET_TYPEOF}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now reports as warnings  what
      \command{gfortran} calls \sQuote{Fortran 2018 deleted features}, all
      of which have long been marked as \sQuote{obsolescent} and some of
      which were deleted in Fortran 2008 or earlier.  Fortran compilers
      are no longer required to support these.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{as.numeric()}, \code{scan()}, \code{type.convert()}
      and other places which use the internal C function \code{R_strtod} now
      require a \emph{non-empty} digit sequence in a decimal or binary
      exponent.  This aligns with the C/POSIX standard for \code{strtod} and
      with \code{?NumericConstants}.

      \item \code{as.data.frame(m, make.names=NA)} now works correctly for
      a matrix \code{m} with \code{NA}'s in row names.
